visual fixes and added filters

--- a/book/templates/add_structure.html
+++ b/book/templates/add_structure.html
@@ -4,6 +4,7 @@
 {% load crispy_forms_tags %}
 {% block head %}
     <h1><a href="{% url 'homepage' %}">HOMEPAGE</a> </h1>
+    <link rel="stylesheet" href="{% static 'css/addStructure.css' %}">
 {% endblock %}
 {% block content %}
 
