fixed some bugs

--- a/book/templates/watch_reviews.html
+++ b/book/templates/watch_reviews.html
@@ -12,7 +12,7 @@
             </textarea>
         </label>
         <br>
-        VALUTAZIONE: {{ res.review_value }}
+        VALUTAZIONE: {{ res.review_value }}/5
         <br><br><br>
     {% empty %}
         <h2>Non sono ancora presenti recensioni da parte degli utenti</h2>
