--- a/book/templates/reservation.html
+++ b/book/templates/reservation.html
@@ -19,13 +19,10 @@
         {% endfor %}
     {% endif %}
     <h1><a href="{% url 'homepage' %}">HOMEPAGE</a> </h1>
-    <h1>Ciao {{ user.username }} effettua la tua prenotazione: </h1><br>
-    {% for el in res %}
-        <h3>{{ el.restaurant_name }}</h3><br>
-        <img src="{{ el.image.url }}" alt="immagine" width="400px" height="300px"><br><br><br>
-    {% endfor %}
-
+    <h2><a href="{% url 'book:results' destination=city %}">TORNA AI RISTORANTI</a> </h2>
+    <h1>Ciao {{ user.username }} effettua la tua prenotazione per {{ res_name }}: </h1><br>
     <form method="post" enctype="multipart/form-data">
+    <img src=" {{ image.url }}" alt="Immagine struttura" height="300" width="300"/>
     {% csrf_token %}
     {% crispy form %}
 
