--- a/templates/registration/registration.html
+++ b/templates/registration/registration.html
@@ -16,7 +16,7 @@
     <div class="registration">
     <h1><a href="{% url 'homepage' %}">HOMEPAGE</a></h1>
     <div class="reg_form">
-            <h1>Registration</h1>
+            <h2>REGISTRATI</h2>
 
         {% csrf_token %}
         {% crispy form %}
