--- a/book/templates/reservation_list.html
+++ b/book/templates/reservation_list.html
@@ -4,6 +4,21 @@
     <h1><a href="{% url 'homepage' %}">HOMEPAGE</a> </h1>
 {% endblock %}
 {% block content %}
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert {{ message.tags }} m-2" id="success_msg" role="alert">
+                <script type="text/javascript">
+                    msgs = document.getElementsByClassName('alert')
+                    for (let i=0; i<msgs.length; i++){
+                        window.setTimeout(function (){
+                            msgs[i].style.display='none';
+                        },2000);
+                    }
+                </script>
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
 
     {% for el in object_list %}
         <form method="post" action="{% url 'book:delete_reservation' pk=el.pk %}">
