--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,14 +1,20 @@
-{% extends 'base.html' %}
 {% load static %}
-{% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
-{% block title %}Login{% endblock %}
 {% block head %}
     <link type="text/css" rel="stylesheet" href="{% static 'css/login.css' %}" />
-
 {% endblock %}
+<meta charset="utf-8">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1">
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link type="text/css" rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
 {% block content %}
     <div class="login">
     <h1><a href="{% url 'homepage' %}">HOMEPAGE</a></h1>
@@ -16,7 +22,7 @@
         <h1>Login</h1>
         {% csrf_token %}
         {% crispy form %}
-        
+
     </div>
     </div>
 {% endblock %}
